Modify DB name and add TrustCerverCertificate=True

--- a/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/appsettings.json
+++ b/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorWebApp8_CRUD-bd5b87f0-8eb8-4d8d-ba2f-5f96f7dd1fc4;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorWebApp8_CRUD;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
